# gpytranslate

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bugs.yml  config.yml  feature-request.yml
.github/workflows/: python3.6.yml  python3.7.yml  python3.8.yml  python3.9.yml  test-suite.yml  tests.yml
examples/: example.py
examples/async/: example.py  https_proxy.py  socks5_proxy.py  tts.py
examples/sync/: example.py  https_proxy.py  proxies.py  socks5_proxy.py  tts.py
gpytranslate/: __init__.py  exceptions.py  gpytranslate.py
gpytranslate/sync/: __init__.py  sync_translator.py
gpytranslate/types/: __init__.py  base_translator.py  translated_object.py
tests/: test_detect.py  test_translate.py
tests/async/: test_detect.py  test_gather.py  test_translate.py  test_tts.py
tests/sync/: test_sync_detect.py  test_sync_translate.py  test_sync_tts.py
